# rust-cdk-example

./: .gitignore  README.md  build.js  cdk.json  package-lock.json  package.json
lib/: rust-cdk-stack.hello.ts  rust-cdk-stack.ts
rust/hello/: Cargo.toml
rust/hello/src/: main.rs
test/: rust-cdk.test.ts
